--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>marie Quijada's Portfolio</title>
+        <title>Marie Quijada's Portfolio</title>
     </head>
 
     <body>
@@ -12,7 +12,7 @@
         <hr />
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project screenshot"/>
-        <h3></h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+        <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
         <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project screenshot" />
         <hr />
         <a href="./public/about.html">About Me</a>
